cluster-setup/superset.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: superset
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset
  namespace: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset
  template:
    metadata:
      labels:
        app: superset
    spec:
      containers:
        - name: superset
          image: apache/superset:latest
          ports:
            - containerPort: 8088
          command: ["/bin/sh"]
          args:
            - "-c"
            - >
              pip install clickhouse-connect &&
              superset db upgrade &&
              superset fab create-admin \
                --username admin \
                --firstname Superset \
                --lastname Admin \
                --email admin@superset.com \
                --password admin &&
              superset init &&
              superset run -h 0.0.0.0 -p 8088

---
apiVersion: v1
kind: Service
metadata:
  name: superset-service
  namespace: superset
spec:
  selector:
    app: superset
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset-ingress
  namespace: superset
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: superset.iit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superset-service
                port:
                  number: 80
